--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,16 @@
   "description": "NoteNest: Securely save and access your notes on the cloud, with exclusive access to view and update your entries.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
